<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/terracotta"
        app:titleTextColor="@color/white"
        app:title="@string/title_detail"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_xlarge">

            <ImageView
                android:id="@+id/image_book_cover"
                android:layout_width="@dimen/image_book_cover_width"
                android:layout_height="@dimen/image_book_cover_height"
                android:src="@drawable/ic_book_placeholder"
                android:contentDescription="@string/book_cover_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_book_title"
                style="@style/TitleLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image_book_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_book_cover"
                android:layout_marginStart="@dimen/spacing_xlarge"
                tools:text="Introduction to Thermodynamics" />

            <TextView
                android:id="@+id/text_book_author"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image_book_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_book_title"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_small"
                tools:text="By Y.A. Cengel" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_grey"
                app:layout_constraintTop_toBottomOf="@id/image_book_cover"
                android:layout_marginTop="@dimen/spacing_xlarge" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/label_price"
                style="@style/BodyText"
                android:text="@string/label_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                android:layout_marginTop="@dimen/spacing_xlarge" />

            <TextView
                android:id="@+id/text_book_price"
                style="@style/TitleMedium"
                android:textColor="@color/terracotta"
                app:layout_constraintStart_toEndOf="@id/guideline_half"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                android:layout_marginTop="@dimen/spacing_xlarge"
                tools:text="R350" />

            <TextView
                android:id="@+id/label_edition"
                style="@style/BodyText"
                android:text="@string/label_edition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_price"
                android:layout_marginTop="@dimen/spacing_large" />

            <TextView
                android:id="@+id/text_book_edition"
                style="@style/BodyText"
                app:layout_constraintStart_toEndOf="@id/guideline_half"
                app:layout_constraintTop_toBottomOf="@id/text_book_price"
                android:layout_marginTop="@dimen/spacing_large"
                tools:text="9th Edition" />

            <TextView
                android:id="@+id/label_condition"
                style="@style/BodyText"
                android:text="@string/label_condition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_edition"
                android:layout_marginTop="@dimen/spacing_large" />

            <TextView
                android:id="@+id/text_condition"
                style="@style/BodyText"
                app:layout_constraintStart_toEndOf="@id/guideline_half"
                app:layout_constraintTop_toBottomOf="@id/text_book_edition"
                android:layout_marginTop="@dimen/spacing_large"
                tools:text="Good - Some highlighting" />

            <TextView
                android:id="@+id/label_course"
                style="@style/BodyText"
                android:text="@string/label_course_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_condition"
                android:layout_marginTop="@dimen/spacing_large" />

            <TextView
                android:id="@+id/text_course_code"
                style="@style/BodyText"
                app:layout_constraintStart_toEndOf="@id/guideline_half"
                app:layout_constraintTop_toBottomOf="@id/text_condition"
                android:layout_marginTop="@dimen/spacing_large"
                tools:text="ENGG202" />

            <TextView
                android:id="@+id/label_seller"
                style="@style/BodyText"
                android:text="@string/label_seller"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_course"
                android:layout_marginTop="@dimen/spacing_large" />

            <TextView
                android:id="@+id/text_seller"
                style="@style/BodyText"
                app:layout_constraintStart_toEndOf="@id/guideline_half"
                app:layout_constraintTop_toBottomOf="@id/text_course_code"
                android:layout_marginTop="@dimen/spacing_large"
                tools:text="Thabo Nkosi" />

            <TextView
                android:id="@+id/label_description"
                style="@style/TitleMedium"
                android:text="@string/label_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_seller"
                android:layout_marginTop="@dimen/spacing_xxlarge" />

            <TextView
                android:id="@+id/text_description"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_description"
                android:layout_marginTop="@dimen/spacing_medium"
                tools:text="Used for Thermodynamics 101. In good condition with some highlighting in chapter 3." />

            <Button
                android:id="@+id/button_inquire"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_terracotta"
                android:text="@string/action_inquire"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/text_description"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:layout_marginBottom="@dimen/spacing_xlarge" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>