<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:padding="@dimen/spacing_xlarge">

    <LinearLayout
        android:id="@+id/layout_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/button_terracotta"
            android:layout_marginBottom="@dimen/spacing_xlarge" />

        <TextView
            style="@style/TitleLarge"
            android:text="@string/profile_name"
            android:layout_marginBottom="@dimen/spacing_small" />

        <TextView
            style="@style/BodyText"
            android:text="@string/profile_email"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_profile_header"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        app:cardElevation="@dimen/elevation_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_xlarge">

            <TextView
                style="@style/TitleMedium"
                android:text="Student Information"
                android:layout_marginBottom="@dimen/spacing_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/spacing_medium">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="100dp"
                    android:text="Student ID:" />

                <TextView
                    style="@style/BodyText"
                    android:text="@string/profile_student_id"
                    android:textColor="@color/text_secondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/spacing_medium">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="100dp"
                    android:text="Module:" />

                <TextView
                    style="@style/BodyText"
                    android:text="@string/profile_module"
                    android:textColor="@color/text_secondary" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>